# SF-Boilerplate-Project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Core/: BaseScreen.cpp  BaseScreen.hpp  WindowManager.cpp  WindowManager.hpp
ProjectileTest/: CMakeLists.txt  Main.cpp  StartScreen.cpp  StartScreen.hpp
Sandbox/: CMakeLists.txt  Main.cpp  ScreenKeys.hpp  StartScreen.cpp  StartScreen.hpp
src/: BaseScreen.hpp  Helpers.hpp  WindowManager.cpp  WindowManager.hpp
